<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic001"
    tools:context=".LoginPage">


    <EditText
        android:id="@+id/upassword"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:background="@drawable/place_background"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/lpassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uname"
        app:layout_constraintVertical_bias="0.095" />

    <EditText
        android:id="@+id/uname"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/place_background"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/lusername"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="294dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edit_background"
        android:text="@string/lbtn"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upassword"
        app:layout_constraintVertical_bias="0.246" />

    <TextView
        android:id="@+id/fpassword"
        android:layout_width="146dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/fpassword"
        android:textColor="#F44336"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upassword"
        app:layout_constraintVertical_bias="0.046" />


</androidx.constraintlayout.widget.ConstraintLayout>