<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic001"
    tools:context=".EditUser">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="215dp">

                <TextView
                    android:id="@+id/header1"
                    android:layout_width="210dp"
                    android:layout_height="34dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="102dp"
                    android:layout_marginTop="68dp"
                    android:layout_marginEnd="101dp"
                    android:gravity="center_horizontal"
                    android:text="@string/header1"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="340dp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="292dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/place_background"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dip"
                    android:ems="10"
                    android:hint="@string/emailInput"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.047"
                    app:layout_constraintStart_toEndOf="@+id/Email"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.369" />


                <EditText
                    android:id="@+id/phoneinput"
                    android:layout_width="290dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/place_background"
                    android:drawableLeft="@drawable/ic_baseline_phone_24"
                    android:drawablePadding="10dip"
                    android:ems="10"
                    android:hint="@string/phoneinput"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.12"
                    app:layout_constraintStart_toEndOf="@+id/Phone"
                    app:layout_constraintTop_toBottomOf="@+id/emailInput" />


                <EditText
                    android:id="@+id/passwordinput"
                    android:layout_width="289dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/place_background"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dip"
                    android:ems="10"
                    android:hint="@string/passwordinput"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.038"
                    app:layout_constraintStart_toEndOf="@+id/passinput"
                    app:layout_constraintTop_toBottomOf="@+id/phoneinput" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/login_edit_background"
                    android:backgroundTint="#1e97b6"
                    android:text="@string/buttonsub"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.82"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordinput"
                    app:layout_constraintVertical_bias="0.167" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="293dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/login_edit_background"
                    android:backgroundTint="#1e97b6"
                    android:text="@string/d65btn"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
                    app:layout_constraintHorizontal_bias="0.033"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordinput"
                    app:layout_constraintVertical_bias="0.0" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>